# enterprise-knowledge-solution

./: .editorconfig  .gcloudignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATAFLOW.md  README.md  invoke.sh  pyproject.toml  run.sh  tasks.py
.devcontainer/: devcontainer.env  devcontainer.json
.github/: dependabot.yml  renovate.json
.github/linters/: .checkov.baseline  .checkov.yaml  .gitleaks.toml  .hadolint.yaml  .jscpd.json  .markdown-lint.yaml  .yaml-lint.yml  (+2 more)
aclstubs/: acl_label_mapping.json  main.py  sampledocs_pre.json  sampledocs_target.json
components/processing/libs/processor-msg/: pyproject.toml
components/processing/libs/processor-msg/src/processors/msg/: __init__.py  main_processor.py  msg_generator.py  msg_processor.py  run.py
components/processing/libs/processor-xlsx/: pyproject.toml
components/processing/libs/processor-xlsx/src/processors/xlsx/: __init__.py  xlsx_generator.py  xlsx_processor.py
components/webui/: .gitignore  Dockerfile  README.md  build.sh  deploy.sh  pyproject.toml  requirements.txt  run_proxy.sh  tasks.py
components/webui/src/: Home.py
components/webui/src/dpu/: api.py  components.py
components/webui/src/pages/: 1_Search_Documents.py  2_Browse_Documents.py  3_App_Configuration.py
components/webui/terraform/: build.tf  cloudrun.tf  iap.tf  main.tf  outputs.tf  variables.tf  versions.tf
docs/: access_control.md  foundation.md
reqs/: README.md  constraints.txt  requirements_all.in  requirements_all.txt  requirements_bootstrap.in  requirements_bootstrap.txt  requirements_dev.in
scripts/: lint.sh
(+305 files in other folders)
