[project]
name = "processor-msg"
version = "0.0.1.dev"
dependencies = [
    # MSG specific requirements
    "wkhtmltopdf",
    "extract-msg",
    "faker",

    # Load common requirements
    "processor-base @ ${PROJECT_ROOT}/components/processing/libs/processor-base",

    # Load xlsx processor
    "processor-xlsx @ ${PROJECT_ROOT}/components/processing/libs/processor-xlsx",
]

[project.scripts]
msg_generator = "processors.msg.msg_generator:main"
msg_processor = "processors.msg.run:main"

